Version 5.0.2 (unreleased)

    Bugs fixed
    ----------
    Bug #23268 System.FormatException when invoking procedure with ENUM input parameter 	
    Bug #23538 Exception thrown when GetSchemaTable is called and "fields" is null. 
    Bug #23245 Connector Net 5.01 Beta Installer produces Antivirus Error Message 
    Bug #23758 Unable to connect to any server - IPv6 related 
    
    Other changes
    -------------
    Increased speed of MySqlParameterCollection.IndexOf(string) orders of magnitude
    (parameter name lookups are now strict on use of parameter marker)
    Improved character set mappings
    Turned MySqlPoolManager into a static class and added a static ctor to
         avoid any race conditions related to initializing the hashtable.
         (A similar suggestion came in from a user)
    Added 'Ignore Prepare' connection string option for disabling prepared
         statements application-wide
         
Version 5.0.1 (Beta)

    Bugs fixed
    ----------
	  Bug #21521 # Symbols not allowed in column/table names.    
    Bug #21874 MySqlException should derive from DbException         
	  Bug #22042 mysql-connector-net-5.0.0-alpha BeginTransaction
	  Bug #22452 MySql.Data.MySqlClient.MySqlException: 	 
	
    Other changes
    -------------
    Implemented simple local transactions
    Added overloaded methods in MySqlDataReader for getting a column value right from column name
    Replaced use of .NET 2.0 compression code with open source zlib library
    Fixed compression
    Fixed some problems with GetSchema and the Indexes and IndexColumns collections
    Fixed shared memory connections
    Implemented command canceling for MySQL 5.0.0 and higher
    Fixed problem with executing a Fill after a FillSchema
    Implemented CommandTimeout for non-batch queries
    Fixed socket create code related to IPv6 (thanks Mark!)
    Added foreign key support to GetSchema
    Fixed installer to add assembly to GAC and machine.config
    
Version 5.0.1 (Alpha)
