@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.42
+//     Runtime Version:2.0.50727.308
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -408,6 +408,60 @@ namespace MySql.Data.MySqlClient {
         internal static string PasswordMustHaveLegalChars {
             get {
                 return ResourceManager.GetString("PasswordMustHaveLegalChars", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to This category includes a series of counters for MySQL..
+        /// </summary>
+        internal static string PerfMonCategoryHelp {
+            get {
+                return ResourceManager.GetString("PerfMonCategoryHelp", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to .NET Data Provider for MySQL.
+        /// </summary>
+        internal static string PerfMonCategoryName {
+            get {
+                return ResourceManager.GetString("PerfMonCategoryName", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to The number of times a procedures metadata had to be queried from the server..
+        /// </summary>
+        internal static string PerfMonHardProcHelp {
+            get {
+                return ResourceManager.GetString("PerfMonHardProcHelp", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to Hard Procedure Queries.
+        /// </summary>
+        internal static string PerfMonHardProcName {
+            get {
+                return ResourceManager.GetString("PerfMonHardProcName", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to The number of times a procedures metadata was retrieved from the client-side cache..
+        /// </summary>
+        internal static string PerfMonSoftProcHelp {
+            get {
+                return ResourceManager.GetString("PerfMonSoftProcHelp", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to Soft Procedure Queries.
+        /// </summary>
+        internal static string PerfMonSoftProcName {
+            get {
+                return ResourceManager.GetString("PerfMonSoftProcName", resourceCulture);
             }
         }
         
